--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,9 +6,10 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #F7F7F7;
+  font-family: "";
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: Lato Black ,source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
