--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #F7F7F7;
-  font-family: "";
+  font-family: "Lato Black";
+  
 }
 
 code {
